force-app/main/default/objects/Price_Increase_Request__c/Price_Increase_Request__c.object-meta.xml
<CustomObject>
    <label>Supplier Price Increase Request</label>
    <nameField>
        <displayFormat>ID-{000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Price Increase Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>