force-app/main/default/objects/Price_Increase_Request__c/fields/Alternate_Supplier_Available__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Supplier_Available__c</fullName>
    <label>Alternate Supplier Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>