force-app/main/default/objects/Price_Increase_Request__c/fields/Alternate_Supplier_Available_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Supplier_Available_Name__c</fullName>
    <label>Alternate Supplier Available Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>