force-app/main/default/objects/Price_Increase_Request__c/fields/Category_Director__c.field-meta.xml
<CustomField>
    <fullName>Category_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Increase_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>