force-app/main/default/objects/Price_Increase_Request__c/fields/Commodity_Manager__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier_Price_Increase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>