force-app/main/default/objects/Price_Increase_Request__c/fields/Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver__c</fullName>
    <label>Current Approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>