force-app/main/default/objects/Price_Increase_Request__c/fields/Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Free_Text__c</fullName>
    <label>Free Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>