force-app/main/default/objects/Price_Increase_Request__c/fields/how_many_part_Numbers__c.field-meta.xml
<CustomField>
    <fullName>how_many_part_Numbers__c</fullName>
    <label># Part Numbers</label>
    <summaryForeignKey>Part__c.Price_Increase_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>