force-app/main/default/objects/Price_Increase_Request__c/fields/Increase_Reason__c.field-meta.xml
<CustomField>
    <fullName>Increase_Reason__c</fullName>
    <label>Increase Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price Chg from Design</fullName>
            </value>
            <value>
                <fullName>Exchange RateIncoterm Change</fullName>
            </value>
            <value>
                <fullName>Minimum Order Quantity Change</fullName>
            </value>
            <value>
                <fullName>Change to Packaging</fullName>
            </value>
            <value>
                <fullName>Matl adjusted to index</fullName>
            </value>
            <value>
                <fullName>Service Part Price Change</fullName>
            </value>
            <value>
                <fullName>Price change from supplier</fullName>
            </value>
            <value>
                <fullName>Temporary Supplier</fullName>
            </value>
            <value>
                <fullName>Change in annual volume</fullName>
            </value>
            <value>
                <fullName>Other Reason for Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>