force-app/main/default/objects/Price_Increase_Request__c/fields/Last_Modified_By_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_User__c</fullName>
    <description>Updates full name of the LastModifiedByID</description>
    <formula>LastModifiedBy.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By User</label>
    <type>Text</type>
</CustomField>