force-app/main/default/objects/Price_Increase_Request__c/fields/Mechanical_or_Electrical_Lead__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_or_Electrical_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mechanical or Electrical Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier_Price_Increase_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>