force-app/main/default/objects/Price_Increase_Request__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site/Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acton</fullName>
            </value>
            <value>
                <fullName>Batesville</fullName>
            </value>
            <value>
                <fullName>Cary</fullName>
            </value>
            <value>
                <fullName>Charleston</fullName>
            </value>
            <value>
                <fullName>Lulea</fullName>
            </value>
            <value>
                <fullName>Milwaukee</fullName>
            </value>
            <value>
                <fullName>Monterrey</fullName>
            </value>
            <value>
                <fullName>Plulvigner</fullName>
                <label>Pluvigner</label>
            </value>
            <value>
                <fullName>Saalfeld</fullName>
            </value>
            <value>
                <fullName>SCC Global</fullName>
            </value>
            <value>
                <fullName>Singapore</fullName>
            </value>
            <value>
                <fullName>Skaneateles Falls</fullName>
            </value>
            <value>
                <fullName>St Paul</fullName>
            </value>
            <value>
                <fullName>Taicang</fullName>
            </value>
            <value>
                <fullName>Tijuana</fullName>
            </value>
            <value>
                <fullName>Suzhou</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>