force-app/main/default/objects/Price_Increase_Request__c/fields/Site_Manager__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Increase_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>