force-app/main/default/objects/Price_Increase_Request__c/fields/Site_Supplier_Owner__c.field-meta.xml
<CustomField>
    <fullName>Site_Supplier_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Supplier Owner(Sourcing)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Price_Increase_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>