force-app/main/default/objects/Price_Increase_Request__c/fields/Supplier_Category__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Category__c</fullName>
    <label>Supplier Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electromechanical</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Hardware</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>Packaging &amp; Labels</fullName>
            </value>
            <value>
                <fullName>Plastics &amp; Resins</fullName>
            </value>
            <value>
                <fullName>Soft Goods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>