force-app/main/default/objects/Price_Increase_Request__c/fields/Supplier_Country__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Country__c</fullName>
    <label>Supplier Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Countries</valueSetName>
    </valueSet>
</CustomField>