force-app/main/default/objects/Price_Increase_Request__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>