force-app/main/default/objects/Price_Increase_Request__c/fields/Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Number__c</fullName>
    <label>Supplier Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>