force-app/main/default/objects/Price_Increase_Request__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Part__c.PPV_Impact_unfavarable__c</summarizedField>
    <summaryForeignKey>Part__c.Price_Increase_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>