force-app/main/default/objects/Price_Increase_Request__c/recordTypes/Large_Capital.recordType-meta.xml
<RecordType>
    <fullName>Large_Capital</fullName>
    <active>true</active>
    <label>Large Capital</label>
</RecordType>