force-app/main/default/objects/Price_Increase_Request__c/recordTypes/Small_Capital.recordType-meta.xml
<RecordType>
    <fullName>Small_Capital</fullName>
    <active>true</active>
    <label>Small Capital</label>
</RecordType>