force-app/main/default/objects/Price_Increase_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CONNECTION_RECEIVED.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>