force-app/main/default/objects/Price_Increase_Request__c/listViews/HRC_PIR_SITE_SOURCING_Leader_Price_Increase_Request.listView-meta.xml
<ListView>
    <fullName>HRC_PIR_SITE_SOURCING_Leader_Price_Increase_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>HRC PIR SITE SOURCING Leader</label>
    <queue>HRC_PIR_SITE_SOURCING_Leader</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>